# Copyright (C) 2023 Intel Corporation
# SPDX-License-Identifier: Apache-2.0

[package]
name = "ffi"
description = "Macro for routing C FFI callbacks to struct methods"
edition = "2021"
homepage = "https://github.com/novafacing/ffi"
keywords = ["ffi", "macro", "callback"]
license = "Apache-2.0"
publish = true
readme = "README.md"
version = "0.1.0"


[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0.70"
proc-macro-error = "1.0.4"
quote = "1.0.33"
syn = { version = "2.0.41", features = ["full"] }
anyhow = "1.0.75"
darling = "0.20.3"

[dev-dependencies]
anyhow = "1.0.75"
trybuild = "1.0.85"
